<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:title="@string/home_menu"
        android:icon="@drawable/nav_home"
        app:showAsAction="always"
        android:checked="true"/>

    <item
        android:id="@+id/my_pet_menu"
        android:enabled="true"
        android:title="@string/my_pet_menu"
        android:icon="@drawable/nav_my_pet"
        app:showAsAction="always"/>

    <item
        android:id="@+id/petcare_menu"
        android:enabled="true"
        android:title="@string/petcare_menu"
        android:icon="@drawable/nav_community"
        app:showAsAction="always"/>

    <item
        android:id="@+id/noti_menu"
        android:enabled="true"
        android:title="@string/noti_menu"
        android:icon="@drawable/nav_noti"
        app:showAsAction="always"/>

    <item
        android:id="@+id/setting_menu"
        android:enabled="true"
        android:title="@string/setting_menu"
        android:icon="@drawable/nav_setting"
        app:showAsAction="always"/>


</menu>