<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountFeat.SignInActivity">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/icon_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/pretendard_bold"
        android:letterSpacing="-0.02"
        android:text="@string/sign_in_title1"
        android:textColor="@color/base_black"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:letterSpacing="-0.02"
        android:text="@string/sign_in_title2"
        android:textColor="@color/base_black"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="@+id/sign_in_title1"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_title1" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAni"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_marginEnd="-56dp"
        android:layout_marginBottom="80dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/kakao_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sign_in_animation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kakao_login_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/radius_16dp"
        android:backgroundTint="#FEE500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/kaka_login_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/kakaoBubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/icon_kakao_bubble"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kaka_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_medium"
                android:letterSpacing="-0.02"
                android:textSize="18dp"
                android:text="@string/kakao_login_title"
                android:textColor="@color/base_black" />
        </LinearLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>